# plaite_backend

./: .env.example  .gitignore  IMAGE_GENERATION.md  QUICK_START.md  README.md  main.py  pyproject.toml  testing.ipynb
configs/: firebase.yaml  upload.yaml
scripts/: check_embeddings.py  convert_pickle_to_parquet.py  diet_tagger.py  list_models.py  restructure_recipes.py  sync_uploaded_status.py
src/plaite/: __init__.py  cli.py  config.py
src/plaite/data/: README.md  __init__.py  _queries.py  _tables.py  columns.py  loader.py  query.py  status.py
src/plaite/firebase/: __init__.py  client.py  stats.py  upload.py
src/plaite/images/: __init__.py  generate.py  process.py  prompt.py
src/plaite/models/: recipe.py
src/plaite/pipeline/: __init__.py  _shared.py  file_upload.py  local_upload.py  upload.py  url_upload.py  validation.py
src/plaite/scraper/: __init__.py  scraper.py
tests/: test_data_module.py
