[project]
name = "plaite"
version = "0.1.0"
description = "Backend tools for Plaite recipe management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "firebase-admin>=6.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "polars>=0.20.0",
    "tqdm>=4.66.0",
    "recipe-scrapers>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
plaite = "plaite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plaite"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["plaite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
